--- a/src/GSvar/BurdenTestWidget.ui
+++ b/src/GSvar/BurdenTestWidget.ui
@@ -149,22 +149,6 @@
       <item row="2" column="0">
        <layout class="QHBoxLayout" name="horizontalLayout_8">
         <item>
-         <widget class="QProgressBar" name="progress_bar">
-          <property name="maximumSize">
-           <size>
-            <width>100</width>
-            <height>16777215</height>
-           </size>
-          </property>
-          <property name="value">
-           <number>0</number>
-          </property>
-          <property name="textVisible">
-           <bool>false</bool>
-          </property>
-         </widget>
-        </item>
-        <item>
          <spacer name="horizontalSpacer_6">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
@@ -226,23 +210,22 @@
       <item row="9" column="3">
        <layout class="QHBoxLayout" name="horizontalLayout_5">
         <item>
-         <widget class="QCheckBox" name="cb_recessive">
-          <property name="enabled">
-           <bool>true</bool>
-          </property>
-          <property name="text">
-           <string>recessive (only hom/compound-het variants)</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QCheckBox" name="cb_denovo">
-          <property name="enabled">
-           <bool>false</bool>
-          </property>
-          <property name="text">
-           <string>de-novo (from report config)</string>
-          </property>
+         <widget class="QComboBox" name="cb_inheritance">
+          <item>
+           <property name="text">
+            <string>dominant</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>dominant (only de-novo variants)</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>recessive (only hom/compund-het variants)</string>
+           </property>
+          </item>
          </widget>
         </item>
         <item>
@@ -424,11 +407,35 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
-       <widget class="QRadioButton" name="rb_gene_all">
+       <widget class="QRadioButton" name="rb_custom">
         <property name="text">
-         <string>all</string>
+         <string>custom gene list:</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+        <property name="autoRepeat">
+         <bool>false</bool>
         </property>
        </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_9">
+        <item>
+         <widget class="QPushButton" name="b_load_genes">
+          <property name="text">
+           <string>load genes</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="l_gene_count">
+          <property name="text">
+           <string>(0 genes)</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
       <item>
        <widget class="QRadioButton" name="rb_protein_coding">
@@ -436,50 +443,16 @@
          <string>protein-coding</string>
         </property>
         <property name="checked">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QRadioButton" name="rb_custom">
+       <widget class="QRadioButton" name="rb_gene_all">
         <property name="text">
-         <string>custom gene list:</string>
+         <string>all</string>
         </property>
        </widget>
-      </item>
-      <item>
-       <layout class="QGridLayout" name="gl_custom_genes">
-        <property name="leftMargin">
-         <number>25</number>
-        </property>
-        <item row="0" column="1">
-         <widget class="QLabel" name="l_gene_count">
-          <property name="text">
-           <string>(0 genes)</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="0">
-         <widget class="QPushButton" name="b_load_genes">
-          <property name="text">
-           <string>load genes</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0" colspan="2">
-         <widget class="QLabel" name="l_genes">
-          <property name="text">
-           <string>...</string>
-          </property>
-          <property name="textFormat">
-           <enum>Qt::AutoText</enum>
-          </property>
-          <property name="wordWrap">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-       </layout>
       </item>
      </layout>
     </widget>
