--- a/src/GSvar/AnalysisInformationWidget.ui
+++ b/src/GSvar/AnalysisInformationWidget.ui
@@ -75,6 +75,9 @@
    </item>
    <item row="2" column="1">
     <widget class="QTableWidget" name="table">
+     <property name="contextMenuPolicy">
+      <enum>Qt::ActionsContextMenu</enum>
+     </property>
      <property name="selectionBehavior">
       <enum>QAbstractItemView::SelectRows</enum>
      </property>
