GSvar: made preliminary version 2 of the ranking algorithm available including selection of the dominant/recessive model.

--- a/src/GSvar/MainWindow.ui
+++ b/src/GSvar/MainWindow.ui
@@ -214,6 +214,9 @@
                    <iconset resource="GSvar.qrc">
                     <normaloff>:/Icons/ranking.png</normaloff>:/Icons/ranking.png</iconset>
                   </property>
+                  <property name="popupMode">
+                   <enum>QToolButton::InstantPopup</enum>
+                  </property>
                  </widget>
                 </item>
                 <item>
