--- a/src/GSvar/VariantWidget.ui
+++ b/src/GSvar/VariantWidget.ui
@@ -162,12 +162,12 @@
         <item row="4" column="0">
          <widget class="QLabel" name="label_8">
           <property name="text">
-           <string>NGSD (het):</string>
+           <string>NGSD count:</string>
           </property>
          </widget>
         </item>
         <item row="4" column="1">
-         <widget class="QLabel" name="ngsd_het">
+         <widget class="QLabel" name="ngsd_counts">
           <property name="text">
            <string/>
           </property>
@@ -177,23 +177,6 @@
          </widget>
         </item>
         <item row="5" column="0">
-         <widget class="QLabel" name="label_9">
-          <property name="text">
-           <string>NGSD (hom):</string>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="1">
-         <widget class="QLabel" name="ngsd_hom">
-          <property name="text">
-           <string/>
-          </property>
-          <property name="textInteractionFlags">
-           <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
-          </property>
-         </widget>
-        </item>
-        <item row="6" column="0">
          <widget class="QLabel" name="label_7">
           <property name="text">
            <string>comments:</string>
@@ -203,7 +186,7 @@
           </property>
          </widget>
         </item>
-        <item row="6" column="1">
+        <item row="5" column="1">
          <widget class="QLabel" name="comments">
           <property name="maximumSize">
            <size>
@@ -222,7 +205,7 @@
           </property>
          </widget>
         </item>
-        <item row="7" column="0">
+        <item row="6" column="0">
          <widget class="QLabel" name="label_6">
           <property name="text">
            <string>transcripts:</string>
@@ -232,7 +215,7 @@
           </property>
          </widget>
         </item>
-        <item row="7" column="1">
+        <item row="6" column="1">
          <widget class="QLabel" name="transcripts">
           <property name="text">
            <string/>
@@ -245,7 +228,7 @@
           </property>
          </widget>
         </item>
-        <item row="8" column="0">
+        <item row="7" column="0">
          <widget class="QLabel" name="label_12">
           <property name="text">
            <string>PubMed ids:</string>
@@ -255,7 +238,7 @@
           </property>
          </widget>
         </item>
-        <item row="8" column="1">
+        <item row="7" column="1">
          <widget class="QLabel" name="pubmed">
           <property name="text">
            <string/>
