--- a/src/GSvar/ReportDialog.ui
+++ b/src/GSvar/ReportDialog.ui
@@ -289,7 +289,7 @@
       <item>
        <widget class="QCheckBox" name="details_cov">
         <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Added information about the coverage of the target region.&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;p&gt;Note: Disabled if no target region is set.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Added information about the coverage of the target region and about gaps.&lt;/p&gt;&lt;p&gt;Note: Disabled if no target region is set.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="text">
          <string>Add coverage details</string>
@@ -333,9 +333,9 @@
        </layout>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_5">
+       <layout class="QHBoxLayout" name="horizontalLayout_9">
         <item>
-         <spacer name="horizontalSpacer_6">
+         <spacer name="horizontalSpacer_11">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
@@ -351,20 +351,17 @@
          </spacer>
         </item>
         <item>
-         <widget class="QCheckBox" name="cov_exon">
+         <widget class="QLabel" name="label_3">
           <property name="toolTip">
-           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Generate a target region based on gene exons from the gene list of the selected target region.&lt;/p&gt;&lt;p&gt;This option is usefull if the target region is based on the entire gene locus, but coverage details like gaps should be calcualted for the exon/splice region only.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Exon-based gap calculation is performed based on the relevant transcripts of the genes defined in the selected target region.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
           <property name="text">
-           <string>Also calculate gaps based on gene exons. Pad gene Exons by:</string>
-          </property>
-          <property name="checked">
-           <bool>false</bool>
+           <string>Pad gene exons by:</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QSpinBox" name="cov_exon_padding">
+         <widget class="QSpinBox" name="cov_exon_padding_2">
           <property name="minimum">
            <number>0</number>
           </property>
@@ -380,7 +377,7 @@
          </widget>
         </item>
         <item>
-         <spacer name="horizontalSpacer">
+         <spacer name="horizontalSpacer_2">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
@@ -415,7 +412,7 @@
         <item>
          <widget class="QLabel" name="min_cov_label">
           <property name="toolTip">
-           <string>Note: Changing the cutoff can be very slow for large target regions!</string>
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Note: Changing the cutoff can be very slow for large target regions because then the pre-calcualted gaps cannot be used.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
           <property name="text">
            <string>Minimum coverage for gap calculation:</string>
@@ -450,6 +447,39 @@
            </size>
           </property>
          </spacer>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_5">
+        <item>
+         <spacer name="horizontalSpacer_6">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Fixed</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>5</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="cov_exon">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Generate a gap report based on the selected target region in addition to the exon-based gap report.&lt;/p&gt;&lt;p&gt;This option is usefull if the target region is based on entire gene loci and a gap report is needed for the entire target region.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+          <property name="text">
+           <string>Also calculate gaps based on the entire target region.</string>
+          </property>
+          <property name="checked">
+           <bool>false</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
